# ants

./: Cargo.toml
data/: dataset_0.txt  dataset_1.txt  dataset_15.txt  dataset_4.txt
examples/: data.rs  func_test.rs  main.rs  main_example.rs  plot_graph.rs  simpler.rs  simpler_example.rs
src/: lib.rs  main.rs
src/ants/: ant.rs  ant_plugin.rs  board.rs  cell.rs  item.rs  mod.rs  params.rs
src/ants/control/: input.rs  metrics.rs  mod.rs  params.rs  simulation_state.rs  time.rs
src/ants/plugins/: ant_plugin.rs  data_plugin.rs  item_plugin.rs  metrics_plugin.rs  mod.rs
