[package]
name = "ants"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1", features = ["dynamic"] }
rand = "0.8.4"
plotlib = "0.5.1"
image = "0.24.4"
queues = "1.1.0"
thiserror = "1.0.37"

# # Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
